# otus_lab7

./: CMakeLists.txt
.github/workflows/: release.yml
src/: commandprocessor.cpp  commandprocessor.h  iprocessor.cpp  iprocessor.h  main.cpp  observer.h  printers.cpp  printers.h
